--- a/Index ahmad.html
+++ b/Index ahmad.html
@@ -2,7 +2,7 @@
 <head>  
 <meta charset="UTF-8">  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<title>مخيم محمد مطلق - وادي رم</title>  
+<title>wadi rum ahmad </title>  
 <style>  
   * {margin:0; padding:0; box-sizing:border-box; font-family:'Tajawal', sans-serif;}  
   body {scroll-behavior:smooth; background:#f4f4f4; color:#2c3e50;}  /* Header */
